# nexus-engine

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmd/nexus/: handlers.go  handlers_container.go  handlers_core.go  handlers_dotfiles.go  handlers_install.go  handlers_ledger.go  handlers_mode.go  handlers_profile.go  handlers_registry.go  handlers_teleport.go  handlers_vault.go  handlers_wsl.go  helpers.go  main.go  main_test.go
dashboard/: .gitignore
dashboard/src/: index.html  main.js  styles.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: main.rs
docs/adr/: 001-humble-object-pattern.md  002-interface-extraction-packagemanager.md  003-typed-error-hierarchy.md  004-zero-trust-command-execution.md  005-coverage-ratchet-strategy.md  006-cross-platform-wsl2-build-tags.md  007-chezmoi-shell-out-strategy.md  008-git-sync-strategy.md  009-secrets-vault-strategy.md  010-mode-switcher.md  011-container-sandbox.md  012-hardware-ledger.md
internal/bridge/: bridge.go  bridge_encoding.go  bridge_encoding_test.go  bridge_linux.go  bridge_test.go  doc.go  (+3 more)
profiles/: base-gamer.yaml  data-science.yaml  ethical-hacker.yaml  frontend-dev.yaml  go-dev.yaml  registry.json  rust-dev.yaml
scripts/: check-license-headers.sh  coverage-ratchet.sh
(+112 files in other folders)
