[package]
name = "nexus-dashboard"
version = "0.10.0"
edition = "2021"
description = "Nexus Protocol Dashboard — V10 HUD"
authors = ["Nexus Core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "nexus-dashboard"
path = "src/main.rs"
